--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,3 @@
-main {
-    max-width: 840px;
-}
-
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -29,6 +25,10 @@ p {
     padding: 0;
 }
 
+main {
+    max-width: 840px;
+}
+
 aside {
     width: 20rem;
     margin: 1rem;
@@ -42,6 +42,10 @@ aside {
 aside img {
     width: 200px;
     height: auto;
+}
+
+p {
+    padding: 10px;
 }
 
 footer {
