--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,24 +1,41 @@
+:root{
+    --primary-color: darkblue;
+    --secondary-color: white;
+    --text-color: #333;
+    --border-color: #000;
+    --light-background: #eee;
+    --shadow-color: gray;
+    --nav-padding: 10px;
+    --link-padding: 20px;
+    --image-width: 150px;
+    --aside-image-width: 200px;
+    --main-width: 840px;
+    --aside-width: 20rem;
+    --spacing: 1rem;
+    --footer-margin-top: 15px;
+}
+
 nav {
-    background-color: darkblue;
-    padding: 10px;
+    background-color: var(--primary-color);
+    padding: var(--nav-padding);
 }
 
 nav a {
-    color: white;
+    color: var(--secondary-color);
     display: block;
-    padding: 20px;
+    padding: var(--link-padding);
 }
 
 h1 {
-    color: darkblue;
+    color: var(--primary-color);
 }
 
 main img {
-    width: 150px;
+    width: var(--image-width);
     height: auto;
-    border: 1px solid black;
+    border: 1px solid var(--border-color);
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 30px var(--shadow-color);
 }
 
 p {
@@ -26,21 +43,21 @@ p {
 }
 
 main {
-    max-width: 840px;
+    max-width: var(--main-width);
 }
 
 aside {
-    width: 20rem;
-    margin: 1rem;
+    width: var(--aside-width);
+    margin: var(--spacing);
     border: 1px solid rgb(0 0 0 / 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
+    padding: var(--spacing);
+    background-color: var(--light-background);
+    color: var(--text-color);
     text-align: center;
 }
 
 aside img {
-    width: 200px;
+    width: var(--aside-image-width);
     height: auto;
 }
 
@@ -49,8 +66,8 @@ p {
 }
 
 footer {
-    margin-top: 15px;
-    border-top: 1px solid #000;
+    margin-top: var(--footer-margin-top);
+    border-top: 1px solid var(--border-color);
     text-align: center;
 }
 
