--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root{
     --primary-color: darkblue;
     --secondary-color: white;
@@ -36,6 +42,8 @@ main img {
     border: 1px solid var(--border-color);
     padding: 2px;
     box-shadow: 0 0 30px var(--shadow-color);
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 p {
@@ -54,11 +62,18 @@ aside {
     background-color: var(--light-background);
     color: var(--text-color);
     text-align: center;
+    position: relative;
 }
 
 aside img {
     width: var(--aside-image-width);
     height: auto;
+}
+
+aside h2 {
+    position: absolute;
+    top: 20px;
+    left: 88px;
 }
 
 p {
@@ -71,5 +86,11 @@ footer {
     text-align: center;
 }
 
-
-
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
