--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1,3 +1,4 @@
+/* Page Design */
 body {
     font-family: "Lora", serif;
     font-optical-sizing: auto;
@@ -6,6 +7,8 @@ body {
     background-color: #f4f4f9;
     padding: 20px;
 }
+
+/* Heading */
 
 h1 {
     font-family: "Montserrat", sans-serif;
@@ -16,6 +19,8 @@ h1 {
     color: #333;
 }
 
+/* Form Design */
+
 form {
     max-width: 500px;
     margin: 0 auto;
@@ -24,6 +29,8 @@ form {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+/* Labels and Inputs */
 
 label {
     display: block;
@@ -42,6 +49,8 @@ input[type="text"], input[type="number"], textarea, select{
     font-size: 16px;
 }
 
+/* Button Design */
+
 button {
     margin-top: 20px;
     padding: 12px;
@@ -58,6 +67,7 @@ button:hover {
     background-color: #0A9396;
 }
 
+/* Footer */
 footer{
     width: 500px;
     margin: 1rem auto;
