--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -64,7 +64,7 @@ nav ul li a {
 
 h1, h2 {
   font-family: var(--heading-font);
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 nav, p, section, article {
