--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -204,8 +204,8 @@ footer .socialmedia img {
 
 .contact-info iframe {
   width: 100%;
-  height: 300px;
-  border: none;
+  height: 350px;
+  border: 0;
 }
 
 .team {
