--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -195,6 +195,15 @@ footer .socialmedia img {
 }
 
 /* Contact Page CSS */
+.contact-heading {
+  text-align: center;                 
+  background-color: var(--accent1-color); 
+  color: white;                         
+  padding: 1rem;                        
+  border-radius: 4px;                 
+  margin: 2rem auto;
+  opacity: 0.8;                                
+}
 
 .contact-info {
   margin: 2rem auto;
