--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -211,11 +211,17 @@ footer .socialmedia img {
 
 .contact-info {
   margin: 2rem auto;
-  max-width: 800px;
   padding: 1rem;
-  border-bottom: 3px solid var(--accent1-color);
-  text-align: center;
+  max-width: 800px;
+	color: #0C0C0D;
+	font-family: "Nunito";
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 0.5;
+	text-align: center;
+	vertical-align: top;
   background-color: #E7E7E7;
+  border-bottom: 3px solid var(--accent1-color);
 }
 
 .contact-info iframe {
