--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -57,7 +57,7 @@ nav ul {
 nav ul li a{
   padding: 6px;
 	background: #FFFFFF;
-  border: 1px solid #04A6EC;
+  border: 1px solid #025375;
 	border-radius: 4px;  
 	color: #232323;
   text-decoration: none;
@@ -182,23 +182,43 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--accent2-color);
   padding: 10px 20px;
-  color: #FFF;
+  background-color: var(--accent2-color);
+  color: var(--primary-color);
 }
 
 footer a {
-  color: #FFF;
+  text-align: center;
+  color: #FFFFFF;
 }
 
 footer .socialmedia {
   display: flex;
   gap: 12px;
+  justify-content: center;
+  align-items: center;
 }
 
 footer .socialmedia img {
   width: 24px;
   height: 24px;
+}
+
+footer .wireframe-link {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 6px 12px;
+  background-color: #0567FA;
+  color:#FFFFFF;
+  font-family: var(--body-font);
+  font-weight: normal;
+  font-size: 12px;
+  border-radius: 6px;
+  transition: background-color 0.3s ease;
+}
+
+footer .wireframe-link:hover {
+  background-color: var(--dark-color);
 }
 
 /* Contact Us Page CSS */
@@ -328,7 +348,7 @@ footer .socialmedia img {
 
 .contact-form button {
   margin-top: 1rem;
-  background-color: var(--accent2-color);
+  background-color: #0567FA;
   color: #FFF;
   border: none;
   border-radius: 5px;
@@ -340,7 +360,7 @@ footer .socialmedia img {
 }
 
 .contact-form button:hover {
-  background-color: var(--accent1-color);
+  background-color: var(--dark-color);
 }
 
 
