--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -121,6 +121,23 @@ nav, p, section, article {
   border-radius: 4px;
 }
 
+.hero video {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.hero article button {
+  float: right;
+  width: 125px;
+  height: 80px;
+  margin-left: 16px;
+  border-radius: 4px;
+  border: none;
+  background-color: var(--accent1-color);
+  color: #E7E7E7;
+}
+
 /*Grid Layout (History)*/
 .history {
   display: grid;
@@ -363,9 +380,25 @@ footer .wireframe-link:hover {
   background-color: var(--dark-color);
 }
 
+/* Tours Page CSS */
 
+.tours {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px;
+  padding: 16px;
+}
 
+.tours h2 {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 16px;
+}
 
-
-
-
+.tours figure {
+  flex: 1 1 250px;
+  margin: 0 1rem;
+  text-align: center;
+  max-width: 200px;
+}
