--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -127,16 +127,6 @@ nav, p, section, article {
   height: auto;
 }
 
-.hero article btn {
-  display: inline-block;
-  padding: 0.8rem 1.5rem;
-  background: var(--accent1-color);
-  color: #FFFFFF;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 4px;
-}
-
 /*Grid Layout (History)*/
 .history {
   display: grid;
@@ -464,3 +454,6 @@ footer .wireframe-link:hover {
   gap: 2rem;
 }
 
+.home-info img{
+  border-radius: 6px;
+}
