--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -439,6 +439,11 @@ footer .wireframe-link:hover {
   padding: 0.5rem;
 }
 
+.newsletter button {
+  background-color: #010052;
+  color: #FFFFFF;
+}
+
 .btn {
   display: inline-block;
   padding: 0.8rem 1.5rem;
